--- a/app/src/main/res/layout/f_card.xml
+++ b/app/src/main/res/layout/f_card.xml
@@ -48,7 +48,7 @@
             <TextView
                 android:id="@+id/ft2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="TextView"
