--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -43,6 +43,7 @@
             android:layout_height="30dp"
             android:id="@+id/author"
             android:layout_marginRight="160dp"
+            android:layout_marginLeft="10dp"
             android:gravity="bottom"
             android:drawablePadding="10dp"
             android:textColor="@android:color/white"
@@ -84,10 +85,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/mm"
                 android:textStyle="bold"
                 android:text="Title"
-                android:textSize="17sp"
+                android:padding="15dp"
+                android:textSize="18sp"
+                android:textColor="#000"
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/img"
                 android:id="@+id/title"/>
