--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -20,16 +20,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="10sp">
+
 
             <TextView
                 android:id="@+id/t1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:text="TextView"
                 android:textAllCaps="true"
                 android:textColor="#000000"
@@ -42,14 +41,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/t2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:text="TextView"
                 android:textAllCaps="true"
                 android:textColor="#000000"
@@ -74,7 +72,7 @@
                 android:gravity="center_horizontal"
                 android:text="TextView"
                 android:textAllCaps="false"
-                android:textColor="#000000"
+                android:textColor="#87ceeb"
                 app:fontFamily="@font/mbold" />
 
         </LinearLayout>
