--- a/app/src/main/res/layout/f_card.xml
+++ b/app/src/main/res/layout/f_card.xml
@@ -75,7 +75,7 @@
                 android:gravity="center_horizontal"
                 android:text="TextView"
                 android:textAllCaps="false"
-                android:textColor="#000000"
+                android:textColor="#87ceeb"
                 app:fontFamily="@font/mbold" />
 
         </LinearLayout>
