--- a/app/src/main/res/layout/fragment_cric_info.xml
+++ b/app/src/main/res/layout/fragment_cric_info.xml
@@ -1,135 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#FF9800"
+    android:background="@drawable/ic_userinterface"
     android:orientation="vertical"
     android:padding="20sp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cd1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="10sp"
-        android:padding="10sp"
-        app:cardCornerRadius="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/cd2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cd1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:animateLayoutChanges="true">
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="10sp"
+            app:cardCornerRadius="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/cd2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints">
 
-
-            <TextView
-                android:id="@+id/name1"
-
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8sp"
-                app:layout_constraintBottom_toTopOf="@+id/squad1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true">
 
-            </TextView>
+
+                <TextView
+                    android:id="@+id/name1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:drawableRight="@drawable/ic_down"
+                    android:fontFamily="@font/mm"
+                    android:gravity="center"
+                    android:padding="8sp"
+                    android:text="Team1"
+                    android:textColor="#000"
+                    app:layout_constraintBottom_toTopOf="@+id/squad1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.8"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </TextView>
+
+                <ListView
+                    android:id="@+id/squad1"
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    android:padding="10sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name1">
+
+                </ListView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cd2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10sp"
+            app:cardCornerRadius="10sp"
+            app:layout_constraintBottom_toTopOf="@id/cd3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cd1"
+            tools:ignore="MissingConstraints">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true">
+
+
+                <TextView
+                    android:id="@+id/name2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mm"
+                    android:gravity="center"
+                    android:padding="8sp"
+                    android:drawableRight="@drawable/ic_down"
+                    android:layout_marginLeft="20dp"
+                    android:text="Team2"
+                    android:textColor="#000"
+                    app:layout_constraintBottom_toTopOf="@+id/squad2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </TextView>
+
+                <ListView
+                    android:id="@+id/squad2"
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    android:padding="10sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name2">
+
+                </ListView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cd3"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginRight="10sp"
+            android:padding="10sp"
+            app:cardCornerRadius="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cd2"
+            tools:ignore="MissingConstraints">
 
             <ListView
-                android:id="@+id/squad1"
+                android:id="@+id/details"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name1">
+                android:layout_height="180dp"
+                android:clickable="false"
+                android:dividerHeight="0sp"
+                android:padding="10sp">
 
             </ListView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cd2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-
-        android:layout_margin="10sp"
-        android:padding="10sp"
-        app:cardCornerRadius="10sp"
-        app:layout_constraintBottom_toTopOf="@id/cd3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.016"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cd1"
-        tools:ignore="MissingConstraints">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:animateLayoutChanges="true">
-
-
-            <TextView
-                android:id="@+id/name2"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:padding="8sp"
-                app:layout_constraintBottom_toBottomOf="@+id/squad2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </TextView>
-
-            <ListView
-                android:id="@+id/squad2"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:layout_marginTop="15dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name2">
-
-            </ListView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cd3"
-
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="10sp"
-        android:padding="10sp"
-        app:cardCornerRadius="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cd2"
-        tools:ignore="MissingConstraints">
-
-        <ListView
-            android:id="@+id/details"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="false"
-            android:dividerHeight="0sp"
-            android:padding="8sp">
-
-        </ListView>
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
