--- a/app/src/main/res/layout/row1.xml
+++ b/app/src/main/res/layout/row1.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/row"
+        android:id="@+id/row1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/mbold"
-        android:textColor="#000"
-        android:gravity="center"/>
+        android:textColor="#000"/>
 </LinearLayout>
