--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="grad_2">#539FBD</color>
     <color name="grad_5">#09BC8A</color>
     <color name="grad_4">#CBD4C2</color>
+    <color name="black">#000</color>
+
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorAccent">#FFFFFF</color>
