news clickable item done

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -18,7 +18,7 @@
         <LinearLayout
             android:id="@+id/team1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="74dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal"
