--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -18,34 +18,49 @@
         <LinearLayout
             android:id="@+id/team1"
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="33dp"
             android:layout_weight="1"
+
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="10sp">
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/team2"
+            android:layout_width="match_parent"
+            android:layout_height="177dp"
+            android:layout_weight="1"
+
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="10sp">
 
 
             <TextView
-                android:id="@+id/t1"
-                android:layout_width="wrap_content"
+                android:id="@+id/t2"
+                android:layout_width="107dp"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textAllCaps="true"
                 android:textColor="#000000"
+                android:gravity="center"
                 android:textSize="18sp"
                 app:fontFamily="@font/mm" />
-
         </LinearLayout>
 
         <LinearLayout
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="160dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/t2"
+                android:id="@+id/t1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -67,7 +82,7 @@
             <TextView
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="28dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="TextView"
