--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -20,7 +20,7 @@
             app:titleEnabled="false"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="#87ceeb"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
