--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -5,10 +5,10 @@
         android:id="@+id/nav_cricket"
         android:icon="@drawable/ic_cricket"
         android:title="Cricket" />
-    <item
-        android:id="@+id/nav_football"
-        android:icon="@drawable/ic_football1"
-        android:title="Football" />
+<!--    <item-->
+<!--        android:id="@+id/nav_football"-->
+<!--        android:icon="@drawable/ic_football1"-->
+<!--        android:title="Football" />-->
     <item
         android:id="@+id/nav_news"
         android:icon="@drawable/ic_news_icon_16"
